force-app/main/default/objects/ChronarPay_Payment_Card__mdt/ChronarPay_Payment_Card__mdt.object-meta.xml
<CustomObject>
    <label>ChronarPay Payment Card</label>
    <pluralLabel>ChronarPay Payment Cards</pluralLabel>
</CustomObject>