force-app/main/default/objects/ChronarPay_Payment_Card__mdt/fields/Gateway_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Card_Type__c</fullName>
    <label>Gateway Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>