force-app/main/default/objects/ChronarPay_Payment_Card__mdt/fields/Payment_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Type__c</fullName>
    <label>Payment Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>