force-app/main/default/objects/ChronarPay_Payment_Card__mdt/fields/Preauthorization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preauthorization_Amount__c</fullName>
    <label>Preauthorization Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>