force-app/main/default/objects/ChronarPay_Payment_Card__mdt/fields/SAP_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Card_Type__c</fullName>
    <label>SAP Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>