force-app/main/default/objects/ChronarPay_Payment_Card__mdt/fields/Uses_Preauthorization__c.field-meta.xml
<CustomField>
    <fullName>Uses_Preauthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Preauthorization</label>
    <type>Checkbox</type>
</CustomField>